@@ -10,6 +10,7 @@
 - Fix: [#11259] Custom JSON object breaks saves.
 - Fix: [#11315] Ride that has never opened is shown as favorite ride of many guests.
 - Fix: [#11405] Building a path through walls does not always remove the walls.
+- Fix: RCT1 scenarios have more items in the object list than are present in the park or the research list.
 - Improved: [#6530] Allow water and land height changes on park borders.
 
 0.2.6 (2020-04-17)
